Fix the name of S&P note to S&P Guidelines

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <p>
         For a general discussion of WoT security and privacy issues, see the  
 	<a href="https://www.w3.org/TR/2018/NOTE-wot-security-20181203/">WoT 
-        Security and Privacy Considerations</a> document.
+        Security and Privacy Guidelines</a> document.
       </p>
       <p>For details on the Web of Things architecture, please refer to the following:
       <ul>
