Move submitter to appendix

--- a/index.html
+++ b/index.html
@@ -462,38 +462,6 @@
         <h2>OAuth2 Flows</h2>
         <dl>
 
-          <dt>Submitter(s)</dt>
-          <dd>
-
-            Michael McCool, Cristiano Aguzzi
-
-          </dd>
-          <!--dt>Reviewer(s)</dt>
-          <dd>
-
-
-          </dd>
-          <dt>Tracker Issue ID</dt>
-          <dd>
-
-
-          </dd>
-          <dt>Category</dt>
-          <dd>
-
-
-          </dd>
-          <dt>Class</dt>
-          <dd>
-
-
-          </dd>
-          <dt>Status</dt>
-          <dd>
-
-            WIP
-
-          </dd-->
           <dt>Target Users</dt>
           <dd>
 
@@ -1061,11 +1029,12 @@
     <section>
       <h1>Summary</h1>
     </section>
-    <!--<section class="appendix remove">
+    <section class="appendix">
       <h2>Acknowledgements</h2>
-      <p> @TODO decide whether needed... </p>
+      <p>Cristiano Aguzzi</p>
     </section>
-    <section class="appendix remove">
+
+    <!--<section class="appendix remove">
       <h2>Change History</h2>
       <p> @TODO decide whether needed... </p>
     </section>-->
