Replace TODO with editor note in oAuth

--- a/index.html
+++ b/index.html
@@ -491,10 +491,16 @@
               <li>Resource Owner might be different in each use case.
                 A Thing Description may also combine resources from different owners or web server.</li>
             </ul>
-            TO DO: Check the OAuth 2.0 spec to determine exactly how Resource Owner is defined.
-            Is it the actual owner of the resource (eg running the web server) or simply someone
-            with the rights to access that resource?
-            <br>
+            <div class="ednote" id="issue-container-generatedID">
+              <div role="heading" class="ednote-title marker" id="h-ednote"
+              aria-level="2">
+                <span>Editor's note</span><span style=
+                "text-transform: none">: Check the OAuth 2.0 spec to determine exactly how Resource Owner is defined.</span>
+              </div>
+              <p class="">Is it the actual owner of the resource (eg running the web server) or simply someone
+                with the rights to access that resource?</p>
+            </div>
+
             The OAuth 2.0 protocol specifies an authorization layer that separates the client from the resource owner.
             The basic steps of this protocol are summarized in the following diagram:
             <pre>
