expand ack desc for current contributor

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
     </section>
     <section class="appendix">
       <h2>Acknowledgements</h2>
-      <p>Cristiano Aguzzi</p>
+      <p>Cristiano Aguzzi contributed the section on OAuth2 and provided best-practice recommendations.</p>
     </section>
 
     <!--<section class="appendix remove">
