--- a/index.html
+++ b/index.html
@@ -986,6 +986,13 @@
 
     <section>
       <h1>Object Security</h1>
+      <p class="ednote" title="Object Security Under Construction">
+      We need additional implementation experience to refine this, and also need to 
+      consider how the recently proposed TD Signatures align.  
+      Some additional TD examples and/or features may be needed.
+      So this section
+      should be considered "under construction".
+      </p>
       <p>Object security is recommended if a CoAP or MQTT to HTTP gateway is used that 
       translates protocols.  
       Ideally however you would NOT translate the payload itself but use end-to-end security.
