fix bug/number intro section

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         Please contribute to this draft using the 
         <a href="https://github.com/w3c/wot-security-best-practices/issues">GitHub Issue</a> 
         feature of the <a href="https://github.com/w3c/wot-security-best-practices/">WoT 
-        Security Best Practices /a> repository.
+        Security Best Practices</a> repository.
       </p>
     </section>
 
