fixed broken refs

--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,8 @@
       practices should also be followed for secure update.
       </p><p>
       Good references for best practices for secure update and provisioning
-      are the IIC Security Framework [[IICSF]] and the IoT Security Foundation's
-      guidelines [[IoTSF]].
+      are the IIC Security Framework [[IicSF16]] and the IoT Security Foundation's
+      guidelines [[ISF17]].
       </p>
    </section>
 
