Add local TLS/DTLS security via pre-shared keys

--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
               (Note: a draft IETF RFC for the MQTT URL scheme is being discussed)</li>
         </ul></p></dd>
       </dl>
+
+      <section id="secure-transport-local">
+        <h2>Local networks</h2>
+        In order to secure HTTP and COAP with TLS/DTLS in local networks, we highly recommend 
+        the usage of TLS 1.3 with Raw Public Keys as specified in <a href="https://datatracker.ietf.org/doc/html/rfc8446">RFC8446</a> and 
+        <a href="https://datatracker.ietf.org/doc/html/rfc7250">RFC7250</a>.
+      </section>
+      
     </section>
 
     <section>
