convert to use group respec option

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             , processVersion: 2017
             , shortName:      "wot-security-best-practices"
             , copyrightStart: 2017
-            , wg:             "Web of Things Working Group"
-            , wgURI:          "https://www.w3.org/WoT/WG/"
-            , wgPublicList:   "public-wot-wg"
+            , group:          "wg/wot"
             , edDraftURI:     "https://w3c.github.io/wot-security-best-practices/"
             , githubAPI:      "https://api.github.com/repos/w3c/wot-security-best-practices"
             , issueBase:      "https://www.github.com/w3c/wot-security-best-practices/issues"
