--- a/index.html
+++ b/index.html
@@ -437,6 +437,8 @@
         In order to secure HTTP and COAP with TLS/DTLS in local networks, we highly recommend 
         the usage of TLS 1.3 with Raw Public Keys as specified in <a href="https://datatracker.ietf.org/doc/html/rfc8446">RFC8446</a> and 
         <a href="https://datatracker.ietf.org/doc/html/rfc7250">RFC7250</a>.
+	      
+	<div class="issue" data-number="13"></div>
       </section>
       
     </section>
