--- a/index.html
+++ b/index.html
@@ -438,7 +438,10 @@
         the usage of TLS 1.3 with Raw Public Keys as specified in <a href="https://datatracker.ietf.org/doc/html/rfc8446">RFC8446</a> and 
         <a href="https://datatracker.ietf.org/doc/html/rfc7250">RFC7250</a>.
 	      
-	<div class="issue" data-number="/13"></div>
+	<div class="ednote" title="Local Security Best Practices Under Discussion">
+		Best practices for local security are still
+		<a href="https://github.com/w3c/wot-security-best-practices/issues/13">under discussion.</a>
+	 </div>
       </section>
       
     </section>
