--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
       <h2>Acknowledgements</h2>
       <p>Cristiano Aguzzi contributed the section on OAuth2 and provided best-practice recommendations.
          Elena Reshetova contributed to the discussion around lifecycle and transport.
-         Philipp Blum and Oliver Pfaff contributed to transport and object security.
+         Philipp-Alexander Blum and Oliver Pfaff contributed to transport and object security.
          Ben Francis contributed use case input to local transport.
       </p>
     </section>
