--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
 
       <section id="secure-transport-local">
         <h2>Global Networks</h2>
+        <p>To do.  Use of public URLs, certificates, and CA.
+	<p>
+     </section>
 
       <section id="secure-transport-local">
         <h2>Offline and Local Networks</h2>
