revise issue reference

--- a/index.html
+++ b/index.html
@@ -456,11 +456,11 @@
         <a href="https://datatracker.ietf.org/doc/html/rfc7250">RFC7250</a>.
 	However, the keys still need to be assigned and the identities of endpoints established.
 	In local networks, this should be accomplished using an onboarding process, discussed in the next section.
-	      
-	<div class="ednote" title="Local Security Best Practices Under Discussion">
+	</p>
+	<p class="ednote" title="Local Security Best Practices Under Discussion">
 		Best practices for local security are still
 		<a href="https://github.com/w3c/wot-security-best-practices/issues/13">under discussion.</a>
-	 </div>
+	 </p>
 	</p><p>
 	Unfortunately it may not be possible in general to use some useful consumers, in particular browsers, 
 	with this infrastructure.  The best option is to include client devices in the onboarding practice
@@ -487,7 +487,16 @@
       endpoints then becomes the endpoints' identify, and is encrypted into the certificate that is provided.
       For devices on local networks, keys can be assigned during the onboarding process, but a mechanism
       to establish the identities of endpoints is also needed.  
-      See <a href="https://www.ietf.org/id/draft-nordmark-iotops-onboarding-00.html">Different Aspects of Onboarding for IoT/Edge Devices</a>.
+      </p><p>
+      See 
+      <a href="https://www.ietf.org/id/draft-nordmark-iotops-onboarding-00.html">Different Aspects of Onboarding for IoT/Edge Devices</a>,
+      BRSKI, 
+      DID/VC, 
+      Anima,
+      and
+      <a href="https://datatracker.ietf.org/doc/html/draft-sarikaya-t2trg-sbootstrapping">https://datatracker.ietf.org/doc/html/draft-sarikaya-t2trg-sbootstrapping</a>.
+      </p>
+      <p class="issue" data-number="29">
       </p>
     </section>
 
