--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
       This process is essential in order to establish secure transport between endpoints.
       For systems that are globally visible on the internet, the CA (Certificate Authority) service can
       be considered an onboarding process that assigns certificates to endpoints.  The URL used to access
-      endpoints then becomes the endpoints' identify, and is encrypted into the certificate that is provided.
+      endpoints then becomes the endpoints' identity, and is encrypted into the certificate that is provided.
       For devices on local networks, keys can be assigned during the onboarding process, but a mechanism
       to establish the identities of endpoints is also needed.  
       </p><p>
