Remove OSCOAP, add RFC references

--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
       The main advantage of object security is that a compromised Gateway will be 
       prevented from modifying payloads.  
       </p><p>
-      Example object-security standards to consider are COSE, OSCORE, and OSCOAP. 
+      Example object-security standards to consider are COSE [[RFC8152]], and OSCORE [[RFC8613]].
       </p>
    </section>
 
