Add CBOR and OSCORE abbreviations

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,10 @@
       The main advantage of object security is that a compromised Gateway will be 
       prevented from modifying payloads.  
       </p><p>
-      Example object-security standards to consider are COSE [[RFC8152]], and OSCORE [[RFC8613]].
+      Example object-security standards to consider are
+      <abbr title="CBOR Object Signing and Encryption">COSE</abbr> [[RFC8152]], and
+      <abbr title="Object Security for Constrained RESTful Environments">OSCORE</abbr>
+      [[RFC8613]].
       </p>
    </section>
 
